Fixed button spacing issue, and added extra div for credits.

--- a/css/exoplanets.css
+++ b/css/exoplanets.css
@@ -17,7 +17,7 @@ body  {
     margin: 0px;
     padding: 0px;
     font-size: 14px;
-    height: 9500px;
+    height: 10500px;
 /*    overflow-y: auto;*/
     overflow-x: hidden;
     background: #000;
@@ -155,6 +155,7 @@ z-index:70;
 
 font-size: 16px;
 line-height:110%;
+float: left;
 
 -webkit-animation: fadein 3s linear infinite;
 -moz-animation: fadein 3s linear infinite;
@@ -174,6 +175,7 @@ line-height:110%;
 
 font-size: 16px;
 line-height:110%;
+float: right;
 
 -webkit-animation: fadein 3s linear infinite;
 -moz-animation: fadein 3s linear infinite;
